--- a/paper.tex
+++ b/paper.tex
@@ -15,7 +15,6 @@
 }
 
 \begin{abstract}
-Test, Test, Test ...
 Dfsjkhc sdjfh sdjlkfh sdljkf hlasdjkf haljksdfh asdjlfh als. asdfjk asdjflkha
 sdfljhas dfljashd fljkasdhf jlaksdfh lajskdfh alsjkdfh asldjkf hasldjkfh
 asljkdfh asljkdf hasljdkfh asljkdfh asljkdfh asljkdfh asljkdfh asljkdfh
@@ -28,7 +27,7 @@ asljkdfh alsjkdfh asljkdfh asljkdfh asljkdfh asljkdfh asldkjfh asldkjfh
 aslkdjfh.
 \end{abstract}
 
-\keywords{SSH, OpenSSH, Verschlüsselung}
+\keywords{SSH, OpenSSH, Verschlüsselung, TCP/IP-Protokoll}
 \categories{Allgemein}
 
 \begin{document}
@@ -59,11 +58,16 @@ SSH (Secure Shell) ist eine unixoide Tralalala...
 \section{Grundlegendes zu SSH}
 
 
-SSH verschlüsselt die forlaufende Verbindung zwischen Computern in einem Netzwerk. Dazu verwendet SSH eine Client/Server-Architektur. Abbildung XXX veranschaulicht das Grundprinzip von SSH, das laut seiner Spezifikation die Authentifizierung, die Verschlüsselung und die Integrität von Daten, die in einem Netzwerk übertragen werden, beinhaltet.
+SSH verschlüsselt die forlaufende Verbindung zwischen Computern in einem Netzwerk. Dazu verwendet SSH eine Client/Server-Architektur. Abbildung \ref{fig:abb1} veranschaulicht das Grundprinzip von SSH, das laut seiner Spezifikation die Authentifizierung, die Verschlüsselung und die Integrität von Daten, die in einem Netzwerk übertragen werden, beinhaltet.
 
-\includegraphics[width=\linewidth]{./images/grundprinzip.png}
-
-Wie in der Abbildung zu sehen ist, verlangt eine SSH-Verbindung zwei Authentifizierungen \cite{SSH, Seite 47}. Der Server authentifiziert sich beim Client und umgekehrt (näheres zum Ablauf unter XX). Zum Verschlüsseln der Daten werden zufällige Sitzungsschlüssel ausgehandelt. Nach Beenden der Sitzung verlieren diese Schlüssel ihre Gültigkeit. SSH garantiert die Integrität der übertragenen Daten, \Dh die Daten können nicht durch einen Dritten (Mallory) verändert werden. 
+\begin{figure}[!h] 
+\centering 
+\includegraphics[scale=0.25]{./images/grundprinzip.png}
+\label{fig:abb1} 
+\caption[Abbildung 1]{Grundprinzip von SSH, eigene Darstellung.} 
+\end{figure}
+ 
+Wie in der Abbildung \ref{fig:abb1} zu sehen ist, verlangt eine SSH-Verbindung zwei Authentifizierungen \cite[S. 47]{SSH}. Der Server authentifiziert sich beim Client und umgekehrt (näheres zum Ablauf unter \ref{sec:ablauf}). Zum Verschlüsseln der Daten werden zufällige Sitzungsschlüssel ausgehandelt. Nach Beenden der Sitzung verlieren diese Schlüssel ihre Gültigkeit. SSH garantiert die Integrität der übertragenen Daten, \Dh die Daten können nicht durch einen Dritten (Mallory) verändert werden. 
 
 
 \subsection{Protokolle}
@@ -76,16 +80,17 @@ SSH-2 ist modular aufgebaut. Die Architektur besteht aus drei Hauptkomponenten: 
 \subsection{Implementierungen}
 
 Als erste Implementierung des SSH-Protokolls gilt das von Tatu Ylönen 1995 veröffentlichte SSH1.
-Es wurde als freie Software veröffentlicht \cite{SSH, S.11}. Die Implementierung des SSH-2-Protokolls war hingegen ein kommerzielles Produkt. Die kostenlose Nutzung war nur für Bildungseinrichtungen und den nicht-gewerblichen Bereich erlaubt \cite{SSH, S.12}. Folglich kam weiterhin vielerorts die Implementierung des SSH-1-Protokolls zum Einsatz. 1999 entstand das OpenSSH-Projekt, das auf die letzte frei verfügbare Version von SSH aufbaut \cite{OpenSSH}.
+Es wurde als freie Software veröffentlicht \cite[S. 11]{SSH}. Die Implementierung des SSH-2-Protokolls war hingegen ein kommerzielles Produkt. Die kostenlose Nutzung war nur für Bildungseinrichtungen und den nicht-gewerblichen Bereich erlaubt \cite[S. 22]{SSH}. Folglich kam weiterhin vielerorts die Implementierung des SSH-1-Protokolls zum Einsatz. 1999 entstand das OpenSSH-Projekt, das auf die letzte frei verfügbare Version von SSH aufbaut \cite{OpenSSH}.
 
 Aktuell gibt es verschiedene Implementierungen des SSH-Protokolls. Je nach Einsatzzweck (mobiles Gerät/Workstation) oder Betriebssystem gibt es verschiedene Alternativen. Im Folgenden ist eine Auswahl von Implementierungen mit Kurzbeschreibung aufgeführt.
 
-\paragraph{Dropbear} Ist eine Implementierung des SSH2-Protokolls und steht unter der MIT-Lizenz \cite{dropbear}. Dropbear ist vorallem für Systeme mit geringer Prozessorleistung und geringer Speicherkapazität interessant. Es ist auf verschiedenen POSIX-basierten Systemen lauffähig. Eine entsprechende Auflistung ist auf der offiziellen Webseite von Dropbear \footnote{https://matt.ucc.asn.au/dropbear/dropbear.html\#platforms} zu finden.
+\subparagraph{Dropbear} ist eine Implementierung des SSH2-Protokolls und steht unter der MIT-Lizenz \cite{dropbear}. Dropbear ist vorallem für Systeme mit geringer Prozessorleistung und geringer Speicherkapazität interessant. Es ist auf verschiedenen POSIX-basierten Systemen lauffähig. Eine entsprechende Auflistung ist auf der offiziellen Webseite von Dropbear \footnote{https://matt.ucc.asn.au/dropbear/dropbear.html\#platforms} zu finden.
 
-\paragraph{Mosh} Bietet weitere Funktionalitäten, vorallem für mobile Nutzer. Die Verbindung wird bei Roaming aufrecht erhalten. Zusätzlich bietet Mosh eine optimierte Latenz, \Dh ...
-\paragraph{Lsh}
-\paragraph{PuTTY} MIT-Lizenz, überwiegend für Windows.
-\paragraph{OpenSSH}
+\subparagraph{Mosh} (mobile shell) bietet erweiterte Funktionalitäten, vorallem für mobile Geräte. Beispielsweise wird die Verbindung bei Roaming aufrechterhalten. Mosh ist keine direkte Implementierung des SSH-Protokolls. Es überträgt keinen Byte-String zwischen Client und Server. Vielmehr tauschen Client und Server einen Snapshot des aktuellen Bildschirms aus \cite{mosh}.
+
+\subparagraph{Lsh}
+\subparagraph{PuTTY} MIT-Lizenz, überwiegend für Windows.
+\subparagraph{OpenSSH}
 
 
 
@@ -135,7 +140,7 @@ sshfs [user@]host:[dir] mountpoint [options]
 
 \section{Sicherheitsrelevante Betrachtung}
 \subsection{Verschlüsselungsalgorithmen bei SSH}
-\subsection{Ablauf einer sicheren Verbindung}
+\subsection{Ablauf einer sicheren Verbindung}\label{sec:ablauf}
 \subsection{Aktuelle Schwachstellen}
 \subsection{Anforderungen an den Serveradministrator}
 
@@ -145,19 +150,6 @@ sshfs [user@]host:[dir] mountpoint [options]
 
 \section{Zusammenfassung}
 
-\bzgl \bzw \ca \Dh \evtl \etc \ggf \iAllg \oAe \uAe \usf \usw \vgl \zB \\
-\cf \cp \ie \eg \etc \wrt \viz \vs \Wlog \\
-\PF{"a"} \\
-\RM{bla} \TT{bla} \\
-\BF{bla \MD{bla} bla} \\
-\IT{bla \MD{bla} bla} \\
-\SC{bla} \EM{bla} \\
-\CAL{R} \\
-\NT{ein Terminal} $\Blank \nin \{\}$
-
-
-asljkdfh asljkdfh alskjdfh lajskdfh. dasdkf hjasdfh adköshf asjlkdf
-hasjldkf hlasjkdfh jl hasdljka shdfasdfa sdfasdf\footnote{sdfsdfs dsfsdfsd}
 
 \bibliography{sample}
 \bibliographystyle{abbrv}
